z-index fix for page body

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -9,10 +9,6 @@
     #header #menu li:not(.fa) {
         display: none;
     }
-    .main-content {
-        position: relative;
-        z-index: 0;
-    }
     .admin-bar.mean-container #menu-product-menu {
         top: 88px;
         height: calc(100vh - 88px) !important;
