--- a/style.css
+++ b/style.css
@@ -60,6 +60,8 @@ body {
 .main-content {
   padding-left: 0;
   padding-right: 0;
+  position: relative;
+  z-index: 0;
 }
 
 #menu .ddsmoothmenu {
